[package]
name = "leptonica-sudoku"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
repository = "https://github.com/ccouzens/leptonica-sudoku"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptonica-sys = "0.2.1"